syntax = "proto3";

package ai.metathings.service.identityd;

import "google/protobuf/timestamp.proto";

message ApplicationCredential {
	message _Role {
		string id = 1;
		string name = 2;
		string domain_id = 3;
	}
	string id = 1;
	string name = 2;
	string description = 3;
	string secret = 4;
	bool unrestricted = 5;
	string project_id = 6;
	_Role role = 7;
	google.protobuf.Timestamp expires_at = 8;
}
